#
# Copyright (c) 2015 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2026      Nanook Consulting  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += \
        base/base.h

libdschedmca_ddl_la_SOURCES += \
        base/ddl_base_open.c \
        base/ddl_base_close.c \
        base/ddl_base_select.c \
        base/ddl_base_fns.c
