#
# Copyright (c) 2006      Los Alamos National Security, LLC.  All rights
#                         reserved.
# Copyright (c) 2026      Nanook Consulting  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += \
        base/base.h

libdschedmca_dinstalldirs_la_SOURCES += \
        base/dinstalldirs_base_components.c \
        base/dinstalldirs_base_expand.c
