#
# Copyright (c) 2026      Nanook Consulting  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

EXTRA_DIST += \
        base/help-sched-base.txt

headers += \
        base/base.h

libdschedmca_sched_la_SOURCES += \
        base/sched_base_select.c \
        base/sched_base_frame.c
